# dissertation

./: .gitattributes  .gitignore  DESIGN.md  PRODUCT.md  Problem_Specification_and_Project_Plan_Conor_Brown.docx  README.md  brief.md  pyproject.toml
.agents/plugins/: marketplace.json
.playwright-cli/: page-2026-04-24T18-39-03-186Z.yml  page-2026-04-24T18-39-27-837Z.yml  page-2026-04-24T18-39-46-248Z.yml  page-2026-04-24T18-40-11-606Z.yml  page-2026-04-24T18-40-34-998Z.yml  page-2026-04-24T18-40-56-325Z.yml  page-2026-04-24T18-41-30-394Z.yml
docs/: active_threads.md  agent_visibility_plan.md  agent_visibility_ui_mockups.html  artifact_registry.md  current_state.md  decisions.md  development_log.md  dissertation_scaffold.md  evaluation_protocol.md  evidence_notebook.html  evidence_notebook_design_evolution_plan.md  harness_experiment_protocol.md  literature_review_map.md  local_model_feasibility.md  milestones.md  project_specification.md  real_data_governance.md  references.bib  research_program.md  typical_session_workflow.md  visual_artifacts_direction.md
docs/run_logs/: 20260424T075111Z_initial_scaffold.md  20260424T084000Z_harness_protocol_and_smoke_runs.md  20260424T085900Z_candidate_retrieval_iteration.md  20260424T090341Z_visibility_phase1.md  20260424T092054Z_visibility_phase2.md  20260424T093100Z_visibility_phase3.md  20260424T160537Z_local_provider_smoke_path.md  (+11 more)
prompts/: agent_roles.md
scripts/: model_probe.py  run_harness_experiment.py
site/: index.html
tests/: test_agents.py  test_cli.py  test_labels.py  test_llm_pipeline.py  test_visibility.py
(+35 files in other folders)
