[project]
name = "epilepsy-agent-framework"
version = "0.1.0"
description = "Training-free multi-agent framework for seizure frequency extraction from epilepsy clinic letters."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
epilepsy-agents = "epilepsy_agents.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
